--- a/apps/notro-tail/package.json
+++ b/apps/notro-tail/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.1",
+    "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@notionhq/client": "^2.2.15",
     "astro": "^4.11.5",
